fixup! Static: make input font size 16px on mobile (for both form input components and menu item input components)

--- a/client/static/root-styles.css
+++ b/client/static/root-styles.css
@@ -90,7 +90,7 @@ td .ui.fluid.selection.dropdown > .text {
 @media only screen and (max-width: 767px) {
 
   #root {
-     margin: 0 0.25em 0 0.25em !important;
+    width: calc(100vw - 21px) !important;
   }
 
 
